# goit-pyweb-hw-07

./: config.ini  pyproject.toml  seed.py  select_1.py  select_10.py  select_2.py  select_3.py  select_4.py  select_5.py  select_6.py  select_7.py  select_8.py  select_9.py
alembic/versions/: 55de6b0ec5ed_init.py
conf/: db.py  models.py
