[project]
name = "goit-pyweb-hw-07"
version = "0.1.0"
description = ""
authors = [
    {name = "Bohdan Chekhirkin",email = "chechirkinbogd@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "sqlalchemy (>=2.0.38,<3.0.0)",
    "alembic (>=1.14.1,<2.0.0)",
    "psycopg2 (>=2.9.10,<3.0.0)",
    "faker (>=36.1.1,<37.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
